--- a/src/components/detalhes/styles.module.scss
+++ b/src/components/detalhes/styles.module.scss
@@ -1,33 +1,18 @@
-.container {
-    background-image: url("../../assets/Body.png");
-    background-repeat: no-repeat;
-    background-size: 50%;
-    background-attachment: fixed;
-    background-position: center;
-    background-color: #000000;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    box-sizing: border-box;
-    font-size: 16px;
-  }
-
 .panel {
     display: flex;
-    background-color: #393939ee;
-    margin: 20px;
-    width: 95%;
-    height: 90%;
+    background-color: #393939c2;
+    margin: auto;
+    height: 95%;
+    width: 90%;
+    border-radius: 10px;
     flex-direction: column;
     justify-content: space-between;
+    font-size: 12px;
     
     .principal{
       display: flex;
       width: 100%;
-      height: 60%;
+      height: 70%;
 
       .img{
         width: 50%;
@@ -142,5 +127,7 @@
       display: flex;
       width: 100%;
       height: 39%;
+      align-items: center;
+      justify-content: center;
     }
 }
