--- a/styles/login.module.scss
+++ b/styles/login.module.scss
@@ -16,7 +16,7 @@
 .login {
   margin-top: 2rem;
   width: 400px;
-  height: 300px;
+  height: 330px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,6 +25,11 @@
   padding: 2rem 1.5rem;
   background-color: rgba(0, 0, 0, 0.7);
   border: solid 1px var(--white);
+
+  h1 {
+    color: var(--white);
+    padding-bottom: 1rem;
+  }
 }
 
 .form {
