--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -7,6 +7,8 @@
   align-items: center;
   padding: 0 24px;
   justify-content: space-between;
+  box-shadow: 1px 1px lightgrey;
+  
 }
 
 .botoesHeader {
