--- a/styles/userEdit.module.scss
+++ b/styles/userEdit.module.scss
@@ -22,10 +22,23 @@
   position: relative;
   left: calc(50% - 250px);
 
+}
+
+.headerUserEdit{
+  height: 70px;
+  background-color: #393939;
+  width: 500px;
+  border-radius: 15px 15px 0px 0px;
+  border: solid 1px var(--white);
+  position: relative;
+  top: -12%;
+
   h1 {
     color: var(--white);
     padding-bottom: 1rem;
+    text-align: center;
   }
+
 }
 
 .form {
