--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,9 +13,9 @@
   --dark-700: #1d1d2e;
 
   --gray-100: #8a8a8a;
-  --gray-200: #7D7C7C;
+  --gray-200: #7d7c7c;
   --green-900: #3fffa3;
-  --pink-900: #E91C5D;
+  --pink-900: #e91c5d;
 }
 
 button {
