--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -3,8 +3,8 @@
     color: #fff;
     padding: 25px;
     margin: 120px;
-    margin-left: 45px;
-    margin-right: 45px;
+    margin-left: 4%;
+    margin-right: 4%;
   }
   
   .botoesNav {
