--- a/styles/myImages.module.scss
+++ b/styles/myImages.module.scss
@@ -6,18 +6,16 @@
   background-position: center;
   background-color: #000000;
   height: 100vh;
-  width: 100vw;
 
   .myImages {
     height: 400px;
-    margin-left: 45px;
-    margin-right: 45px;
-  
+    margin-left: 5%;
+    margin-right: 5%;
+
     border-radius: 15px;
     background-color: rgba(0, 0, 0, 0.7);
     border: solid 1px var(--white);
   }
-
 }
 
 .headerMyImages {
@@ -31,5 +29,6 @@
     color: var(--white);
     padding-bottom: 1rem;
     text-align: center;
+    padding: 12px;
   }
 }
