--- a/styles/passwordEdit.module.scss
+++ b/styles/passwordEdit.module.scss
@@ -1,4 +1,4 @@
-.container {
+.Container {
     background-image: url("../src/assets/Body.png");
     background-repeat: no-repeat;
     background-size: 50%;
