--- a/src/components/detalhes/styles.module.scss
+++ b/src/components/detalhes/styles.module.scss
@@ -1,13 +1,9 @@
 .panel {
-    display: flex;
-    background-color: #393939c2;
-    margin: auto;
-    height: 95%;
-    width: 90%;
-    border-radius: 10px;
-    flex-direction: column;
-    justify-content: space-between;
-    font-size: 12px;
+  background-color: #393939;
+  border-radius: 15px 15px 0px 0px;
+  border: solid 1px var(--white);
+  display: flex;
+  width: 100%;
     
     .principal{
       display: flex;
