--- a/src/components/testeCarrossel/styles.module.scss
+++ b/src/components/testeCarrossel/styles.module.scss
@@ -1,8 +1,3 @@
-body{ 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 .container{ 
     max-width: 540px;
@@ -47,7 +42,7 @@ body{
     gap: 15px;
 }
 
-img{ 
+.img{ 
     height: 100%;
     width: 100%;
     opacity: .3;
