Alteracao do header

--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -13,7 +13,8 @@
 
 .botoesHeader {
   display: flex;
-  width: 200px;
+  width: 150px;
+  align-items: center;
   justify-content: space-between;
 
   a {
