--- a/styles/detalhes.module.scss
+++ b/styles/detalhes.module.scss
@@ -15,9 +15,9 @@
 
 .detalhes {
   margin-top: 2rem;
-  width: 90%;
+  width: 65%;
   height: 80%;
-  display: flex;
+  display: block;
   align-items: center;
   justify-content: center;
   flex-direction: column;
