--- a/styles/login.module.scss
+++ b/styles/login.module.scss
@@ -9,6 +9,7 @@
   height: 100vh;
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
 }
