--- a/styles/myImages.module.scss
+++ b/styles/myImages.module.scss
@@ -5,7 +5,7 @@
   background-attachment: fixed;
   background-position: center;
   background-color: #000000;
-  height: 100%;
+  height: 100vh;
   padding-bottom: 25px;
 
   .myImages {
