--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -3,17 +3,21 @@
     background-repeat: no-repeat;
     background-size: 35%;
     background-position: center;
-    background-position-y: 30%;
+    background-position-y: 20%;
     background-color: #000000;
     height: 100vh;
   }
 
+
   .logoLove{
-    color: var(--gray-200);
+    color: #FFF;
     font-size: 180%;
     display: flex;
     justify-content: center;
-    margin: 300px;
 }
+
   
-  
+.myImages{
+  align-items: center;
+  margin-top: 500px;
+}
