--- a/src/components/detalhes/styles.module.scss
+++ b/src/components/detalhes/styles.module.scss
@@ -1,10 +1,9 @@
 .panel {
   background-color: #393939;
-  border-radius: 15px 15px 0px 0px;
+  border-radius: 15px;
   border: solid 1px var(--white);
   display: flex;
-  width: 100%;
-  flex-direction: column;
+  height: 100%;
   padding: 10px;
 
   h3{
@@ -15,8 +14,8 @@
     
     .principal{
       display: flex;
+      align-items: center;
       width: 100%;
-      height: 70%;
 
       .img{
         width: 75%;
@@ -32,7 +31,7 @@
 
         img{
           width: 30%;
-          height: 90%;
+          height: 80%;
           border-radius: 10px;
         }
 
@@ -70,7 +69,7 @@
       }
 
       .infos{
-        width: 25%;
+        width: 30%;
         height: 85%;
         border-radius: 10px;
         margin: 10px;
