--- a/src/components/detalhes/styles.module.scss
+++ b/src/components/detalhes/styles.module.scss
@@ -6,123 +6,122 @@
   height: 100%;
   padding: 10px;
 
-  h3{
-    color: #ED145B;
+  h3 {
+    color: #ed145b;
     text-align: start;
     margin: 10px;
   }
-    
-    .principal{
+
+  .principal {
+    display: flex;
+    align-items: center;
+    width: 100%;
+
+    .img {
+      width: 75%;
+      height: 85%;
+      border-radius: 10px;
+      margin: 10px;
       display: flex;
+      flex-direction: row;
       align-items: center;
-      width: 100%;
+      justify-content: space-around;
+      border: 1px solid white;
+      padding: 20px;
 
-      .img{
-        width: 75%;
-        height: 85%;
+      img {
+        width: 40%;
+        height: 80%;
         border-radius: 10px;
-        margin: 10px;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-around;
-        border: 1px solid white;
-        padding: 20px;
-
-        img{
-          width: 30%;
-          height: 80%;
-          border-radius: 10px;
-        }
-
-        .propriedades{
-          width: 50%;
-          height: 90%;
-          display: flex;
-          flex-direction: column;
-          flex-wrap: wrap;
-          justify-content: space-between;
-          margin: 10px;
-    
-          div{
-            width: 100%;
-            display: flex;
-            justify-content: space-around;
-    
-            span{
-              align-self: baseline;
-              width: 50%;
-              margin: 10px;
-              color: white;
-            }
-    
-            label{
-              align-self: baseline;
-              text-align: right;
-              width: 50%;
-              margin: 10px;
-              color: white;
-            }
-          }
-          
-        }
       }
 
-      .infos{
-        width: 30%;
-        height: 85%;
-        border-radius: 10px;
-        margin: 10px;
-        flex-direction: row;
+      .propriedades {
+        width: 50%;
+        height: 90%;
         display: flex;
-        justify-content: space-between;
-        border: 1px solid white;
+        flex-direction: column;
         flex-wrap: wrap;
-    
-        .descricao{
-          margin: 10px;
-          width: 100%;
-    
-          p{
-            color: white;
-            text-align: left;
-            margin: 10px;
-            width: 80%;
-            margin-bottom: 50px;
-            text-align: start;
-          }  
-        }
+        justify-content: space-between;
+        margin: 10px;
 
-        div{
-          margin: 10px;
+        div {
           width: 100%;
           display: flex;
           justify-content: space-around;
-          flex-direction: column;
 
-          span{
-            text-align: center;
+          span {
+            align-self: baseline;
+            width: 50%;
+            margin: 10px;
             color: white;
           }
-  
-          button {
-            margin-top: 30px;
-            height: 50px;
-            width: 100%;
-            border-radius: 8px;
-            border: none;
-            background: var(--pink-900);
-            color: var(--white);
-            font-weight: bold;
-            padding: 5px;
-            margin: auto;
-          }
 
-          .value{
-            font-size: 30px;
-            text-align: start;
+          label {
+            align-self: baseline;
+            text-align: right;
+            width: 50%;
+            margin: 10px;
+            color: white;
           }
         }
       }
     }
+
+    .infos {
+      width: 30%;
+      height: 85%;
+      border-radius: 10px;
+      margin: 10px;
+      flex-direction: row;
+      display: flex;
+      justify-content: space-between;
+      border: 1px solid white;
+      flex-wrap: wrap;
+
+      .descricao {
+        margin: 10px;
+        width: 100%;
+
+        p {
+          color: white;
+          text-align: left;
+          margin: 10px;
+          width: 80%;
+          margin-bottom: 50px;
+          text-align: start;
+        }
+      }
+
+      div {
+        margin: 10px;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+
+        span {
+          text-align: center;
+          color: white;
+        }
+
+        button {
+          margin-top: 30px;
+          height: 50px;
+          width: 100%;
+          border-radius: 8px;
+          border: none;
+          background: var(--pink-900);
+          color: var(--white);
+          font-weight: bold;
+          padding: 5px;
+          margin: auto;
+        }
+
+        .value {
+          font-size: 30px;
+          text-align: start;
+        }
+      }
+    }
+  }
 }
